1.0.0 (currently working on)
- [#4116] Change: Drop the option for the manual sorting of event records in the BE
- [#3901] Change: The AJAX module needs to check the BE user rights
- [#4115] Change: Cache the locallang labels in a JavaScript file
- [#3917] Change: Use the PID from the BE user groups when creating new records
- [#3892] Fix: Table headings for registrations, speakers and organizers are incorrect
- [#4094] Fix: Use empty configurations in the unit tests
- [#4008] Change: Use the single view link builder class in the FE and BE
- [#4005] Feature: Add a single view link builder class
- [#4006] Feature: Add getters for the single view page to the category and event type model
- [#4009] Change: The OldModels should provide the Mapper with the data to reduce double DB requests
- [#4007] Change: Provide the new event model in places where single view links get created
- [#4002] Feature: Add a method "find by begin date" to the event mapper
- [#4004] Feature: Use the default organizers in the FE editor
- [#4003] Feature: Add a getter for the default organizer
- [#4001] Feature: Add some fields
- [#3995] Change: Add a conflict with the "sourceopt" extension, thanks to Philipp Gampe
- [#3992] Change: Increase the size of the hideFields and hideColumns fields in the flexforms
- [#3931] Fix: Prices greater 9999.999 are not possible, thanks to Philipp Gampe
- [#3909] Feature: Allow paging for the grids
- [#3955] Change: Add icon to the print button
- [#3985] Change: Move the print button to the top toolbar
- [#3982] Fix: Text overlaps canceled/confirmed icons in grid
- [#3885] Feature: Save the current active tab in the BE user settings BE_USER->uc
- [#3971] Feature: Display flash messages in the ExtJS BE module
- [#3943] Feature: Add a general e-mail form to the BE module
- [#3979] Cleanup: Move the icons from icons/ to Resources/Public/Icons
- [#3967] Cleanup: Drop SEMINARS_UPLOAD_PATH and tx_seminars_constants.php