@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3889] Change: Disable the CSV export button in the events menu if there are no registrations for that event
 - [#4116] Change: Drop the option for the manual sorting of event records in the BE
 - [#3901] Change: The AJAX module needs to check the BE user rights
 - [#4115] Change: Cache the locallang labels in a JavaScript file
